force-app/main/default/objects/Employee__c/fields/Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Hire_Date__c</fullName>
    <description>The employee&apos;s hire date.</description>
    <inlineHelpText>The employee&apos;s hire date.</inlineHelpText>
    <label>Hire Date</label>
    <type>Date</type>
</CustomField>