force-app/main/default/objects/Employee__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <description>The employee&apos;s job title.</description>
    <inlineHelpText>The employee&apos;s job title.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>