force-app/main/default/objects/Employee__c/fields/Total_Claims__c.field-meta.xml
<CustomField>
    <fullName>Total_Claims__c</fullName>
    <description>The total number of claims involving this employee. This field is calculated automatically.</description>
    <inlineHelpText>The total number of claims involving this employee. This field is calculated automatically.</inlineHelpText>
    <label>Total Claims</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>