force-app/main/default/objects/Employee__c/fields/Total_Settlement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Settlement_Amount__c</fullName>
    <description>The sum of all settled claim payments associated with this employee. This field is automatically calculated.</description>
    <inlineHelpText>The sum of all settled claim payments associated with this employee. This field is automatically calculated.</inlineHelpText>
    <label>Total Settlement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>