force-app/main/default/objects/Employee__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Hire_Date__c</columns>
    <columns>Risk_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>