force-app/main/default/objects/Employee__c/listViews/Test_Employees.listView-meta.xml
<ListView>
    <fullName>Test_Employees</fullName>
    <columns>NAME</columns>
    <columns>Risk_Level__c</columns>
    <columns>Total_Claims__c</columns>
    <columns>Total_Settlement_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>Test</value>
    </filters>
    <label>Test Employees</label>
</ListView>